[gd_scene load_steps=5 format=3 uid="uid://be14jkttem12v"]

[ext_resource type="Script" uid="uid://ddrqsevypxw34" path="res://UI/Menus/SettingsMenu/SettingsMenu.gd" id="1_aff3m"]
[ext_resource type="PackedScene" uid="uid://do78wutwh6no7" path="res://Backgrounds/Space/BackgroundSpace.tscn" id="1_edm70"]
[ext_resource type="Shader" uid="uid://wsv2d532da3n" path="res://Scripts/Shaders/Menu/MenuBlur.gdshader" id="1_uftqt"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_edm70"]
shader = ExtResource("1_uftqt")
shader_parameter/blur = 1.5000000712500001

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aff3m")

[node name="SpaceBackground" parent="." instance=ExtResource("1_edm70")]

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 1
material = SubResource("ShaderMaterial_edm70")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.3882353, 0.3882353, 0.3882353, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.1
anchor_right = 0.6
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Settings" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8392157, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Graphics" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="GraphicsLabel" type="Label" parent="MarginContainer/VBoxContainer/Graphics"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Graphics"

[node name="ResolutionContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Graphics"]
layout_mode = 2
size_flags_vertical = 4

[node name="ResolutionLabel" type="Label" parent="MarginContainer/VBoxContainer/Graphics/ResolutionContainer"]
layout_mode = 2
text = "Resolution : "

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/Graphics/ResolutionContainer"]
layout_mode = 2
size_flags_horizontal = 3
selected = 1
item_count = 3
popup/item_0/text = "1280 x 720"
popup/item_0/id = 1
popup/item_1/text = "1920 x 1080"
popup/item_1/id = 0
popup/item_2/text = "2560 x 1440"
popup/item_2/id = 2

[node name="AAContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Graphics"]
layout_mode = 2
size_flags_vertical = 4

[node name="VsyncLabel" type="Label" parent="MarginContainer/VBoxContainer/Graphics/AAContainer"]
layout_mode = 2
text = "Antialiasing : "

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/Graphics/AAContainer"]
layout_mode = 2
size_flags_horizontal = 3
selected = 2
item_count = 3
popup/item_0/text = "No AA"
popup/item_0/id = 0
popup/item_1/text = "FXAA"
popup/item_1/id = 1
popup/item_2/text = "SMAA"
popup/item_2/id = 2

[node name="VsyncContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Graphics"]
layout_mode = 2
size_flags_vertical = 4

[node name="VsyncLabel" type="Label" parent="MarginContainer/VBoxContainer/Graphics/VsyncContainer"]
layout_mode = 2
text = "Vsync : "

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/Graphics/VsyncContainer"]
layout_mode = 2
button_pressed = true

[node name="FpsCapContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Graphics"]
layout_mode = 2
size_flags_vertical = 4

[node name="FpsCapLabel" type="Label" parent="MarginContainer/VBoxContainer/Graphics/FpsCapContainer"]
layout_mode = 2
text = "FPS limit : "

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer/Graphics/FpsCapContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 30.0
max_value = 400.0
value = 200.0
scrollable = false

[node name="SpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/Graphics/FpsCapContainer"]
layout_mode = 2
min_value = 30.0
max_value = 400.0
value = 200.0
alignment = 2
suffix = "fps"

[node name="Camera" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CameraLabel" type="Label" parent="MarginContainer/VBoxContainer/Camera"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Camera"

[node name="CameraMode" type="OptionButton" parent="MarginContainer/VBoxContainer/Camera"]
layout_mode = 2
selected = 1
item_count = 2
popup/item_0/text = "Focus"
popup/item_0/id = 0
popup/item_1/text = "Mouse look"
popup/item_1/id = 1

[node name="Controls" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ControlsLabel" type="Label" parent="MarginContainer/VBoxContainer/Controls"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Controls"

[node name="ThrottleDeadzoneContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Controls"]
layout_mode = 2

[node name="ThrottleDeadzoneLabel" type="Label" parent="MarginContainer/VBoxContainer/Controls/ThrottleDeadzoneContainer"]
layout_mode = 2
text = "Throttle deadzone : "

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer/Controls/ThrottleDeadzoneContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 0.1
step = 0.01
value = 0.02

[node name="SpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/Controls/ThrottleDeadzoneContainer"]
layout_mode = 2
max_value = 0.1
step = 0.01
value = 0.02
alignment = 2

[node name="ControlsTipsLabel" type="Label" parent="MarginContainer/VBoxContainer/Controls"]
layout_mode = 2
text = "Current keybinds (currently not configurable) :
- Z to throttle forward / S to throttle backward
- Q to rotate left / D to rotate right
- A to strafe left / E to strafe right
- P toggle precision mode (cruise control)
- Right click toggle aim to cursor"

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/separation = 20
alignment = 1

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="Apply" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "Apply
"

[connection signal="item_selected" from="MarginContainer/VBoxContainer/Graphics/ResolutionContainer/OptionButton" to="." method="_on_resolution_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Graphics/AAContainer/OptionButton" to="." method="_on_antialiasing_selected"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Graphics/VsyncContainer/CheckBox" to="." method="_on_vsync_toggled"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Graphics/FpsCapContainer/HSlider" to="." method="_on_fps_cap_slide_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Graphics/FpsCapContainer/SpinBox" to="." method="_on_fsp_cap_box_changed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Camera/CameraMode" to="." method="_on_camera_mode_selected"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Controls/ThrottleDeadzoneContainer/HSlider" to="." method="_on_throttle_slider_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Controls/ThrottleDeadzoneContainer/SpinBox" to="." method="_on_throttle_boxs_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/Apply" to="." method="_on_apply_pressed"]
